Icons alignment issue

--- a/src/scss/shared/_buttons.scss
+++ b/src/scss/shared/_buttons.scss
@@ -106,6 +106,11 @@ a {
         transition: .2s cubic-bezier(0.165, 0.84, 0.44, 1);
     }
 
+    span {
+        display: flex;
+        align-items: center;
+    }
+
     svg {
         color: rgba($primaryText, .8);
     }
